# tl

./: .gitignore  .tlignore  BENCH.md  BENCHMARKS.md  Cargo.toml  README.md  fozzy.toml  test.sh
artifacts/: headline-benchmark-after.json
crates/cli/: Cargo.toml
crates/cli/src/: daemon.rs  data_access.rs  ipc.rs  lib.rs  locks.rs  main.rs  system_config.rs  util.rs
crates/cli/src/cmd/: branch.rs  diff.rs  fetch.rs  flush.rs  gc.rs  init.rs  log.rs  merge.rs  mod.rs  pin.rs  publish.rs  pull.rs  push.rs  remote.rs  restore.rs  show.rs  start.rs  stash.rs  status.rs  tag.rs  unpin.rs  worktree_add.rs  worktree_list.rs  worktree_remove.rs  worktree_switch.rs
crates/cli/tests/: integration_test.rs  test_config.rs  test_git_parity.rs
crates/cli/tests/common/: fixtures.rs
crates/cli/tests/workflows/: checkpoint_lifecycle.rs  deep_history.rs  edge_cases.rs  large_files.rs  pin_unpin_gc.rs  publish_pull.rs  restore_rewind.rs
crates/core/: Cargo.toml
crates/core/src/: blob.rs  hash.rs  lib.rs  store.rs  tree.rs
crates/core/tests/: git_compat.rs  integration_test.rs
crates/jj/: Cargo.toml
crates/jj/src/: export.rs  git_ops.rs  lib.rs  mapping.rs  materialize.rs  merge.rs  publish.rs  workspace.rs
crates/journal/: Cargo.toml
crates/journal/benches/: checkpoint_bench.rs
crates/journal/src/: checkpoint.rs  incremental.rs  journal.rs  lib.rs  pathmap.rs  recovery.rs  retention.rs
crates/journal/tests/: integration.rs  symlink_permission.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: coalesce.rs  debounce.rs  lib.rs  overflow.rs
crates/watcher/src/platform/: linux.rs  macos.rs  mod.rs
plan-ascending/: 0-INDEX.md  1.md  2.md  3.md  4.md  5.md  7.md  9.md
scripts/: headline_benchmark.py  live_benchmark.py
tests/: INIT_GUIDE.md  checkpoint_lifecycle.explore.fozzy.json  checkpoint_lifecycle.fuzz.fozzy.json  checkpoint_lifecycle.host.fozzy.json  checkpoint_lifecycle.run.fozzy.json  checkpoint_lifecycle.shrink.fozzy.json  cli.explore.fozzy.json  cli.fuzz.fozzy.json  cli.host.fozzy.json  cli.run.fozzy.json  cli.shrink.fozzy.json  cli_cmd_gc.explore.fozzy.json  cli_cmd_gc.fuzz.fozzy.json  cli_cmd_gc.host.fozzy.json  cli_cmd_gc.memory.fozzy.json  cli_cmd_gc.shrink.fozzy.json  cli_main.explore.fozzy.json  cli_main.fuzz.fozzy.json  cli_main.host.fozzy.json  cli_main.shrink.fozzy.json  cmd_gc.explore.fozzy.json  cmd_gc.fuzz.fozzy.json  cmd_gc.host.fozzy.json  cmd_gc.memory.fozzy.json  cmd_gc.shrink.fozzy.json  core_blob.fuzz.fozzy.json  core_blob.host.fozzy.json  core_blob.memory.fozzy.json  core_blob.shrink.fozzy.json  daemon.explore.fozzy.json  daemon.fuzz.fozzy.json  daemon.host.fozzy.json  daemon.memory.fozzy.json  daemon.run.fozzy.json  daemon.shrink.fozzy.json  data_access.explore.fozzy.json  data_access.fuzz.fozzy.json  data_access.run.fozzy.json  data_access.shrink.fozzy.json  deep_history.explore.fozzy.json  (+181 more)
