[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/watcher",
    "crates/journal",
    "crates/jj",
    "crates/cli",
]

[workspace.dependencies]
# Core hashing and storage
blake3 = { version = "1.5", features = ["rayon", "mmap"] }
sha1 = "0.10"
flate2 = "1.0"
memmap2 = "0.9"
sled = "0.34"

# Concurrency
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "fs", "io-util", "net", "signal", "macros"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
dashmap = "5.5"

# Data structures
smallvec = "1.13"
ahash = "0.8"
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# File watching
notify = { version = "6.1", features = ["macos_fsevent"] }
ignore = "0.4"  # .gitignore/.tlignore pattern parsing

# CLI
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
indicatif = "0.17"
owo-colors = "4.0"

# JJ integration
jj-lib = "0.13"

# Utilities
chrono = "0.4"
ulid = { version = "1.1", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
walkdir = "2.4"
hex = "0.4"

# Compression
zstd = "0.13"

# Testing and benchmarking
criterion = "0.5"
tempfile = "3.10"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Timelapse Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/timelapse"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
