[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tl"
path = "src/main.rs"

[dependencies]
# All timelapse crates
core = { path = "../core" }
watcher = { path = "../watcher" }
journal = { path = "../journal" }
jj = { path = "../jj" }

# CLI
clap = { workspace = true }
indicatif = { workspace = true }
owo-colors = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Async runtime
tokio = { workspace = true }

# IPC & System
nix = { version = "0.27", features = ["fs", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
