[package]
name = "core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core hashing and storage
blake3 = { workspace = true }
sha1 = { workspace = true }
flate2 = { workspace = true }
memmap2 = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
dashmap = { workspace = true }

# Data structures
smallvec = { workspace = true }
ahash = { workspace = true }
bytes = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }
toml = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Compression
zstd = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
