[package]
name = "jj"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# JJ integration
jj-lib = { workspace = true }

# Core dependencies
tl_core = { path = "../core", package = "core" }
journal = { path = "../journal" }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
sled = { workspace = true }
ulid = { workspace = true }
blake3 = { workspace = true }
config = "0.13"
tempfile = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
walkdir = { workspace = true }
toml = { workspace = true }
hex = { workspace = true }
